# NyanHeroes-Claimer

./: README.md  loader.py  requirements.txt  run.py
Phantom/: CollectionsPage.163591da.js  CollectionsPage.ecb976b5.js  Eth.2d040527.js  Eth.e923e106.js  EthSelectWallet.9c373740.js  EthSelectWallet.d391f92f.js  ExplorePage.48913488.js  ExplorePage.4e464988.js  HomeTabPage.0d4c362a.js  HomeTabPage.461b9d42.js  HomeTabPage.79898bcd.js  HomeTabPage.93b0ccd7.js  SettingsConnectHardware.02a3b3c4.js  SettingsConnectHardware.39a6da90.js  SettingsConnectHardware.a51ea76b.js  SettingsConnectHardware.c959b640.js  SettingsConnectHardware.ed167c7e.js  collectibles.4fd9b29c.js  collectibles.f7823fac.js  connect_hardware.7ed36a95.js  connect_hardware.efe29100.js  connect_hardware.f79ebd6d.js  connect_hardware.html  esm.022f3542.js  esm.24b00791.js  esm.4058bdad.js  esm.78ec8af4.js  ethAlwaysAsk.js  ethUseMetaMask.js  ethUsePhantom.js  inpageBtc.js  inpageSol.js  ledgerSignerBitcoin.63456bcf.js  ledgerSignerBitcoin.74767fd7.js  manifest.json  metaplex.04cfb981.js  metaplex.540193c0.js  metaplex.a7fe443c.js  multichainMigration.8f2c9ae1.js  notification.484284f4.js  (+24 more)
Phantom/locales/am/: translation.json
Phantom/locales/ar/: translation.json
Phantom/locales/bn/: translation.json
Phantom/locales/de/: translation.json
Phantom/locales/en/: translation.json
Phantom/locales/es/: translation.json
config/: load_config.py  settings.yaml  wallets.txt
src/: bot.py  onchain.py  phantom.py  util.py
src/sender/: Cargo.toml  main.py
src/sender/src/: main.rs
(+26 files in other folders)
