[package]
name = "nyan_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
anyhow = "1.0.81"

solana-client =  "1.18.9"
solana-sdk = "1.18.9"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"